--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,11 @@
             "name": "yy",
             "email": "yy@weiheinc.com"
         }
-    ]
+    ],
+    "autoload": {
+        "psr-4":{
+            "Video\\":"src/"
+        }
+    }
 }
 
